appId: com.shopify.example.ShopifyAcceleratedCheckoutsApp
---
- launchApp:
    appId: "com.shopify.example.ShopifyAcceleratedCheckoutsApp"
    clearState: true
- tapOn: "Settings"

# Scroll down if needed to find settings options
- scroll

- runFlow:
    when:
      visible:
        text: "1"
        index: 0
    commands:
      - tapOn:
          text: "1"
          index: 0

# Scroll down if needed to find settings options
- scroll

- runFlow:
    when:
      visible:
        text: "1"
        index: 0
    commands:
      - tapOn:
          text: "1"
          index: 0

- tapOn: "(Optional)"
- inputText: "invalid-email"
- tapOn: "Back"

- tapOn:
    id: "plus.circle"
    index: 0
- tapOn: "Create Cart"
- tapOn: "Buy with Apple\_Pay"
- tapOn: "Pay with Passcode"

# This should not happen
- assertVisible: "Update Shipping Contact"
# Expected Behaviour
# - assertVisible:
#     id: "Checkout"
